--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
                 target="_blank"
                 >Hamilton Joins Ferrari In 2025!</a
               >
-              <!-- <br /> -->
               <img
                 src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-1240w,f_auto,q_auto:best/rockcms/2024-02/240102-lewis-hamilton-mb-1209-65adb6.jpg"
               />
@@ -47,14 +46,24 @@
                 src="https://media.formula1.com/content/dam/fom-website/sutton/2022/Japan/Sunday/1431871634.jpg.img.1536.high.jpg"
               />
             </li>
+            <li>
+              <a
+                href="https://www.formula1.com/en/latest/article.the-beginners-guide-to-the-formula-1-weekend.5RFZzGXNhEi9AEuMXwo987.html"
+                target="_blank"
+                >The beginner's guide to the F1 weekend</a
+              >
+              <img
+                src="https://media.formula1.com/image/upload/t_16by9Centre/f_auto/q_auto/v1698622135/trackside-images/2023/F1_Grand_Prix_of_Mexico/1763952911.jpg.transform/9col-retina/image.jpg"
+              />
+            </li>
           </ul>
         </div>
       </div>
       <div class="standings">
-        <h4>DRIVER  STANDINGS</h4>
+        <h4>DRIVER STANDINGS</h4>
       </div>
       <div class="constructors">
-        <h4>CONSTRUCTORS  STANDING</h4>
+        <h4>CONSTRUCTORS STANDING</h4>
       </div>
       <div class="next-race">
         <h4>NEXT RACE</h4>
@@ -92,9 +101,4 @@
       </div>
     </div>
   </body>
-  <footer>
-    <div>
-      <p class="Credentials"></p>
-    </div>
-  </footer>
 </html>
