Added 2 more constructors in the standings list

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <ul>
             <li>
               <a
+                class="news-a"
                 href="https://www.espn.com/f1/story/_/id/39435691/ferrari-confirm-lewis-hamilton-driver-2025-f1-season"
                 target="_blank"
                 >Hamilton Joins Ferrari In 2025!</a
@@ -38,6 +39,7 @@
             </li>
             <li>
               <a
+                class="news-a"
                 href="https://www.formula1.com/en/latest/article.formula-1-to-race-in-japan-until-2029-after-new-five-year-extension.7yAlDYf8uDZBUBZn5fBcLx.html"
                 target="_blank"
                 >Japanese GP will stay in calender until 2029</a
@@ -48,6 +50,7 @@
             </li>
             <li>
               <a
+                class="news-a"
                 href="https://www.formula1.com/en/latest/article.the-beginners-guide-to-the-formula-1-weekend.5RFZzGXNhEi9AEuMXwo987.html"
                 target="_blank"
                 >The beginner's guide to the F1 weekend</a
